--- a/src/ui/styles/themes/_variables.scss
+++ b/src/ui/styles/themes/_variables.scss
@@ -31,7 +31,7 @@
 
   --sidebar-bg: var(--white);
   --sidebar-width: 240px;
-  --topbar-height: 60px;
+  --topbar-height: 61px;
 
   --font: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   --font-mono: "SF Mono", "Monaco", "Inconsolata", "Fira Code", monospace;
